--- a/반응형01/반응형웹/css/style.css
+++ b/반응형01/반응형웹/css/style.css
@@ -7,6 +7,7 @@ body{
 .logo{
     display: flex;
     justify-content: space-between;
+    margin: auto 0;
 }
 .logo a{
     background:linear-gradient(to right,#fa1ea8,#5072f7);
@@ -23,6 +24,7 @@ body{
     opacity: 0.5;
     cursor: pointer;
     font-size: 30px;
+    outline: none;
 }
 
 .menu a{
@@ -120,11 +122,18 @@ body{
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
-.portfolio div .img{
-    padding: 0px;
+
+.container{
+    width: 70%;
+    margin: 0 auto;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
 }
-.portfolio div img{
-    margin: 5px 0;
+.container img{
+    width: 280px;   
+    margin: 20px auto;
 }
 
 
@@ -196,25 +205,9 @@ body{
     .contact .icon{
         margin: 0 5px;
     }
-    .portfolio div{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        padding-top: 20px;
 
-    }
-    .portfolio div img{
-        width: 280px;
-        
-    }
-    .portfolio .img :nth-child(2){
-        margin: 10px 0;
-    }
-    .portfolio .imgex{
-        margin-bottom: 30px;
-    }
 
+    
     
 }
 /* 테블릿사이즈 */
@@ -229,7 +222,7 @@ body{
         display: none;
     }
     .menu{
-        display: block;
+        display: block !important   ;
     }
     .menu ul{
         display: flex;
@@ -247,21 +240,15 @@ body{
         display: flex;
     }
 
-    .portfolio div{
-        display: flex;
-        flex-direction: row;
-        justify-content: space-evenly;
-        /* align-items: center; */
+    .container{
+        width: 768px;
+        height: 1100px;
+        margin: 0 auto;
+        text-align: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
     }
 
-    .portfolio div .img{
-        display: flex;
-        flex-direction: column;
-    }
-
-    .portfolio .img :last-child{
-        margin-bottom: 30px;
-     }
 
 }
 /* pc 사이즈 */
@@ -271,5 +258,23 @@ body{
         width: 1024px;
         margin: 0 auto;
     }
-    
+    .menu {
+        display: block !important;
+    }
+    .container{
+        width: 1024px;
+        height: 700px;
+        margin: 0  auto;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+    .contact .text  {
+        display: none;
+    }
+    .contact ul{
+        margin: 100px ;
+    }
+ 
 }
