--- a/portfolio/port/css/style.css
+++ b/portfolio/port/css/style.css
@@ -278,3 +278,39 @@ body{
     }
  
 }
+
+/* .lavbox >label{
+    display: inline-block;
+    width: 20px;
+    height: 10px;
+    background-color: black;
+}
+input[id="lav1"]:checked ~ .lavbox>label[for="lav1"]{
+    background-color:  red;
+    border-radius: 3px;
+}
+input[id="lav2"]:checked ~ .lavbox>label[for="lav2"]{
+    background-color:  red;
+    border-radius: 3px;
+}
+input[id="lav3"]:checked ~ .lavbox>label[for="lav3"]{
+    background-color:  red;
+    border-radius: 3px;
+}
+
+
+.modal{
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0,0,0,0.7);
+    position: fixed;
+    top: 0;
+    left: 0;
+}
+.close{
+    color: white;
+    font-size: 50px;
+    position: absolute;
+    right: 50px;
+    top: 50px;
+} */
