--- a/portfolio/port/css/style.css
+++ b/portfolio/port/css/style.css
@@ -1,7 +1,17 @@
 @charset "utf-8";
-
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 body{
     font-family: 'Noto Serif KR', serif;
+}
+/* .header{
+    margin-right: 12px;
+} */
+.header{
+    overflow: hidden;
 }
 
 .logo{
@@ -26,16 +36,10 @@ body{
     font-size: 30px;
     outline: none;
 }
-
-.menu a{
-    display: block;
-    color: black;
-    padding: 15px;
-    font-weight: bolder;
-}
 .menu{
     display: none;
 }
+
 /* 헤더끝 */
 /* 배너 */
 
@@ -52,7 +56,7 @@ body{
 
 .banner h1{
     font-size: 12vw;
-    letter-spacing: 0.2em;
+    letter-spacing: 0.15em;
     background:linear-gradient(to right,#5072f7,#fa1ea8);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -86,15 +90,14 @@ body{
 
 .work .ul>li>h3{
     text-align: center;
+    font-size: 130%;
 }
 .work .ul>li>p{
     width: 80%;
-    margin: 0px auto;
+    margin: 10px auto;
     text-align: center;
 }
-.one p{
-    font-size: 30px;
-}
+
 
 
 /* 워크끝 */
@@ -106,7 +109,7 @@ body{
 }
 
 .portfolio .P{
-    font-size: 50px;
+    font-size: 80px;
     margin: 50px 0 auto;
     padding-top: 50px;
     text-align: center;
@@ -115,7 +118,7 @@ body{
     -webkit-text-fill-color: transparent;
 }
 .portfolio .last{
-    font-size: 15px;
+    font-size: 20px;
     margin: 15px auto;
     text-align: center;
     background: linear-gradient(to right bottom,#fa1ea8 30%,#5072f7 70%);
@@ -144,7 +147,7 @@ body{
 /* 콘텐츠 */
 
 .sub_title{
-    font-size: 50px;
+    font-size: 80px;
     margin: 50px auto;
     text-align: center;
     background: linear-gradient(to right bottom,#fa1ea8 30%,#5072f7 70%);
@@ -152,8 +155,9 @@ body{
     -webkit-text-fill-color: transparent;
 }
 
-.contact .text{
+.contact .text p{
     text-align: center;
+    font-size: 18px;
 }
 
 .contact ul{
@@ -205,6 +209,9 @@ body{
     .contact .icon{
         margin: 0 5px;
     }
+    .contact .text  {
+        display: none;
+    }
 
 
     
@@ -216,10 +223,22 @@ body{
     .header{
         display: flex;
         justify-content: space-between;
-        margin: 0 auto;
+        /* margin: 0 auto; */
+        overflow: hidden;
     }
     .logo button{
         display: none;
+    }
+    .logo a{
+        font-size: 30px;
+        padding-top: 10px ;
+    }
+    .menu a{
+        display: block;
+        color: black;
+        padding: 30px 20px 20px 20px;
+        font-weight: bolder;
+        font-size: 20px;
     }
     .menu{
         display: block !important   ;
@@ -236,7 +255,9 @@ body{
         font-size: 30px;
         
     }
+   
     .work .ul{
+        width: 90%;
         display: flex;
     }
 
@@ -248,15 +269,25 @@ body{
         flex-wrap: wrap;
         justify-content: space-between;
     }
+    .contact .text  {
+        display: block;
+    }
 
 
 }
 /* pc 사이즈 */
 @media all and (min-width:1024px){
-
     .header{
         width: 1024px;
         margin: 0 auto;
+        overflow: hidden;
+    }
+    header .logo{
+        height: 80px;
+    }
+  
+    .logo a{
+        padding-top: 25px;
     }
     .menu {
         display: block !important;
@@ -270,13 +301,12 @@ body{
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .contact .text  {
-        display: none;
-    }
+
     .contact ul{
         margin: 100px ;
     }
- 
+
+
 }
 
 /* .lavbox >label{
