--- a/portfolio/port/css/style.css
+++ b/portfolio/port/css/style.css
@@ -40,6 +40,15 @@ body{
     display: none;
 }
 
+.scale:hover {
+    transform: scale(3.5);
+    -webkit-transform: scale(3.5);
+    -moz-transform: scale(3.5);
+    -ms-transform: scale(3.5);
+    -o-transform: scale(3.5);
+    transition: all 0.3s ease-in-out
+  }
+
 /* 헤더끝 */
 /* 배너 */
 
