--- a/portfolio/port/css/style.css
+++ b/portfolio/port/css/style.css
@@ -40,14 +40,6 @@ body{
     display: none;
 }
 
-.scale:hover {
-    transform: scale(3.5);
-    -webkit-transform: scale(3.5);
-    -moz-transform: scale(3.5);
-    -ms-transform: scale(3.5);
-    -o-transform: scale(3.5);
-    transition: all 0.3s ease-in-out
-  }
 
 /* 헤더끝 */
 /* 배너 */
@@ -211,6 +203,19 @@ body{
 
 /* 모바일 사이즈 */
 @media all and (min-width:320px) {
+   
+
+
+    .container{
+        width: 40%;
+        margin: 0 auto;
+        text-align: center;
+    
+        display: flex;
+        flex-direction: column;
+    }
+
+
 
     .contact .text{
         font-size: 13px;
@@ -221,6 +226,15 @@ body{
     .contact .text  {
         display: none;
     }
+    .scale:hover {
+        transform: scale(1.5);
+        -webkit-transform: scale(1.5);
+        -moz-transform: scale(1.5);
+        -ms-transform: scale(1.5);
+        -o-transform: scale(1.5);
+        transition: all 0.3s ease-in-out
+      }
+    
 
 
     
@@ -281,6 +295,15 @@ body{
     .contact .text  {
         display: block;
     }
+    .scale:hover {
+        transform: scale(2);
+        -webkit-transform: scale(2);
+        -moz-transform: scale(2);
+        -ms-transform: scale(2);
+        -o-transform: scale(2);
+        transition: all 0.3s ease-in-out
+      }
+    
 
 
 }
@@ -314,42 +337,13 @@ body{
     .contact ul{
         margin: 100px ;
     }
+    .scale:hover {
+        transform: scale(3);
+        -webkit-transform: scale(3);
+        -moz-transform: scale(3);
+        -ms-transform: scale(3);
+        -o-transform: scale(3);
+        transition: all 0.3s ease-in-out
+      }
 
-
 }
-
-/* .lavbox >label{
-    display: inline-block;
-    width: 20px;
-    height: 10px;
-    background-color: black;
-}
-input[id="lav1"]:checked ~ .lavbox>label[for="lav1"]{
-    background-color:  red;
-    border-radius: 3px;
-}
-input[id="lav2"]:checked ~ .lavbox>label[for="lav2"]{
-    background-color:  red;
-    border-radius: 3px;
-}
-input[id="lav3"]:checked ~ .lavbox>label[for="lav3"]{
-    background-color:  red;
-    border-radius: 3px;
-}
-
-
-.modal{
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(0,0,0,0.7);
-    position: fixed;
-    top: 0;
-    left: 0;
-}
-.close{
-    color: white;
-    font-size: 50px;
-    position: absolute;
-    right: 50px;
-    top: 50px;
-} */
