--- a/portfolio/port/css/style.css
+++ b/portfolio/port/css/style.css
@@ -338,11 +338,11 @@ body{
         margin: 100px ;
     }
     .scale:hover {
-        transform: scale(3);
-        -webkit-transform: scale(3);
-        -moz-transform: scale(3);
-        -ms-transform: scale(3);
-        -o-transform: scale(3);
+        transform: scale(2);
+        -webkit-transform: scale(2);
+        -moz-transform: scale(2);
+        -ms-transform: scale(2);s
+        -o-transform: scale(2);
         transition: all 0.3s ease-in-out
       }
 
