--- a/port2/style.css
+++ b/port2/style.css
@@ -21,8 +21,9 @@ a:hover{color:skyblue}
     height: 100px;
     cursor: pointer;
     /* z-index: 3; */
-    font-size: 40px;
+    font-size: 50px;
     display: none;
+    color: #ffffff;
     }
 /*왼쪽 메뉴바  */
 .menu {
@@ -58,7 +59,7 @@ a:hover{color:skyblue}
 
 /* 컨텐츠 */
 .container{
-    background-color: blanchedalmond;
+    background-color: #333333;
     position: fixed;
     top: 0;
     left: 0;
@@ -93,13 +94,27 @@ a:hover{color:skyblue}
     gap: 0 0px;
 }
 
-
+.container .KF p{
+    transform: rotateY(360deg);
+    transition: 1s
+}
 .container .KF p:nth-child(1){
     grid-column: 1 / span  2;
+    font-size: 100px;
+    text-align: center;
+    margin-top: 80px;
+    color: #ffffff;
 }
 .container .KF p:nth-child(2){
     background:url(./img/9.jpg);
     background-size: cover;
+}
+.container .KF p:nth-child(4){
+    font-size: 70px;
+    /* text-align: center; */
+    margin-top: 40px;
+    margin-left: 50px;
+    color: #ffffff;
 }
 .container .KF p:nth-child(5){
     background:url(./img/Untitled-1.jpg);
@@ -119,10 +134,25 @@ a:hover{color:skyblue}
     /* width: 100%;
     height: 100%; */
 }
+.container .KF p:nth-child(9){
+    font-size: 70px;
+    text-align: center;
+    margin-top: 100px;
+    /* margin-left: 50px; */
+    color: #ffffff;
+}
 .container .KF p:nth-child(10){
     background:url(./img/5.jpg);
     background-size: cover;
 }
+.container .KF p:nth-child(11){
+    font-size: 70px;
+    text-align: center;
+    margin-top: 100px;
+    /* margin-left: 50px; */
+    color: #ffffff;
+}
+
 .container .KF p:nth-child(13){
     background:url(./img/7.jpg);
     background-size: cover;
@@ -138,24 +168,93 @@ a:hover{color:skyblue}
 
 
 
+.container .JF p {
+    transform: rotateY(360deg);
+    transition: 1s
+}
+.container .JF p:nth-child(2){
+    background: url(./img/j2.jpg);
+    background-size: cover;
+}
 .container .JF p:nth-child(3){
     grid-column: 3 / span  2;
+    font-size: 100px;
+    text-align: center;
+    margin-top: 80px;
+    color: #ffffff;
+}
+.container .JF p:nth-child(4){
+    background-image: url(img/다운로드\ \(6\).jpg);
+    background-size: cover;
 }
 .container .JF p:nth-child(5){
     grid-row: 2 / span  2;
     grid-column: 2/3;
+    background-image: url(img/unnamed.jpg);
+    background-size: cover;
 }
 .container .JF p:nth-child(6){
     grid-row: 2/span 2;
     grid-column: 3/4;
+    background-image: url(img/다운로드\ \(7\).jpg);
+}
+.container .JF p:nth-child(7){
+    background-image: url(img/다운로드\ \(5\).jpg);
+    background-size: cover;
+}
+.container .JF p:nth-child(10){
+    background-image: url(img/다운로드\ \(1\).jpg);
+    background-size: cover;
+}
+.container .JF p:nth-child(12){
+    background-image: url(img/다운로드.jpg);
+    background-size: cover;
+}
+.container .JF p:nth-child(13){
+    background-image: url(img/다운로드\ \(4\).jpg);
+    background-size: cover;
 }
 
 
 
+
+
+.container .CF p{
+    transform: rotateY(360deg);
+    transition: 1s
+}
+.container .CF p:nth-child(2){
+    background: url(./img/부엉이/2.jpg);
+    background-size: cover;
+}
+.container .CF p:nth-child(3){
+    background: url(./img/부엉이/images.jpg);
+    background-size: cover;
+}
 .container .CF p:nth-child(5){
     grid-column: 1 / span  2;
     grid-row: 2/span 3;
+    background: url(img/부엉이/훠궈1.jpg);
+    background-size: cover;
 }
 .container .CF p:nth-child(6){
     grid-column: 3/5;
+    font-size: 100px;
+    text-align: center;
+    margin-top: 80px;
+    color: #ffffff;
 }
+.container .CF p:nth-child(7){
+    background: url(./img/부엉이/1ada9177-9dfd-4603-949f-c8ac0fb52035_m.jpg);
+    background-size: cover;
+}
+.container .CF p:nth-child(9){
+    background: url(./img/부엉이/회전레이아웃-메뉴.jpg);
+    background-size: cover;
+}
+
+.container .CF p:nth-child(10){
+    background: url(./img/부엉이/1e37b60c8b5e02714869329e44b06df2.jpg);
+    background-size: cover;
+}
+
